@@ -380,10 +380,10 @@ environment variables are set on the machine to override the
 built-in settings.  More information about these environment variables can
 be found in the <a href="docs/compiler.html#idl_env">TAO_IDL documentation.</a></P>
 
-<P>It is also advisable to set either the <CODE>ACE_ROOT</CODE> environment
+<P>It is also mandatory to set the <CODE>ACE_ROOT</CODE> environment
 variable as outlined in the
 <a href="../ACE/ACE-INSTALL.html">ACE
-installation notes</A> or the <code>TAO_ROOT</code> environment variable.
+installation notes</A> and the <code>TAO_ROOT</code> environment variable.
   </P>
 
 Remember to <a href="../ACE/ACE-INSTALL.html">set
